--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint --fix \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "tsc --noEmit && eslint --quiet --fix \"src/**/*.ts\" \"test/**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
