--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "scripts": {
     "dev": "lerna run dev --parallel",
-    "format": "lerna run format"
+    "format": "lerna run format --parallel",
+    "lint": "lerna run lint --parallel"
   }
 }
